[package]
name = "titrator"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # optimize for size
lto = true # link time optimization
codegen-units = 1 # this increases optimization
panic = 'abort'
strip = true

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
